"ranking.cpp"と"ranking.h"を追加

--- a/Team_3year_Balloon.vcxproj
+++ b/Team_3year_Balloon.vcxproj
@@ -208,6 +208,7 @@
     <ClCompile Include="cpp&amp;h\pause.cpp" />
     <ClCompile Include="cpp&amp;h\pause_ui.cpp" />
     <ClCompile Include="cpp&amp;h\player.cpp" />
+    <ClCompile Include="cpp&amp;h\ranking.cpp" />
     <ClCompile Include="cpp&amp;h\rectcollision.cpp" />
     <ClCompile Include="cpp&amp;h\renderer.cpp" />
     <ClCompile Include="cpp&amp;h\result.cpp" />
@@ -279,6 +280,7 @@
     <ClInclude Include="cpp&amp;h\pause.h" />
     <ClInclude Include="cpp&amp;h\pause_ui.h" />
     <ClInclude Include="cpp&amp;h\player.h" />
+    <ClInclude Include="cpp&amp;h\ranking.h" />
     <ClInclude Include="cpp&amp;h\rectcollision.h" />
     <ClInclude Include="cpp&amp;h\renderer.h" />
     <ClInclude Include="cpp&amp;h\result.h" />
