プレイヤーを宙に浮かす処理を付けた

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][SideWindow]
-Pos=60,60
+Pos=604,30
 Size=102,100
+Collapsed=0
+
+[Window][BasicInfomation]
+Pos=740,60
+Size=102,54
+Collapsed=0
+
+[Window][UIInfo]
+Pos=204,20
+Size=717,492
 Collapsed=0
 
