--- a/Team_3year_Balloon.vcxproj
+++ b/Team_3year_Balloon.vcxproj
@@ -205,9 +205,11 @@
     <ClCompile Include="cpp&amp;h\model_info.cpp" />
     <ClCompile Include="cpp&amp;h\mouse.cpp" />
     <ClCompile Include="cpp&amp;h\number.cpp" />
+    <ClCompile Include="cpp&amp;h\p_thunder.cpp" />
     <ClCompile Include="cpp&amp;h\pause.cpp" />
     <ClCompile Include="cpp&amp;h\pause_ui.cpp" />
     <ClCompile Include="cpp&amp;h\player.cpp" />
+    <ClCompile Include="cpp&amp;h\p_zombie.cpp" />
     <ClCompile Include="cpp&amp;h\ranking.cpp" />
     <ClCompile Include="cpp&amp;h\rectcollision.cpp" />
     <ClCompile Include="cpp&amp;h\renderer.cpp" />
@@ -277,9 +279,11 @@
     <ClInclude Include="cpp&amp;h\model_info.h" />
     <ClInclude Include="cpp&amp;h\mouse.h" />
     <ClInclude Include="cpp&amp;h\number.h" />
+    <ClInclude Include="cpp&amp;h\p_thunder.h" />
     <ClInclude Include="cpp&amp;h\pause.h" />
     <ClInclude Include="cpp&amp;h\pause_ui.h" />
     <ClInclude Include="cpp&amp;h\player.h" />
+    <ClInclude Include="cpp&amp;h\p_zombie.h" />
     <ClInclude Include="cpp&amp;h\ranking.h" />
     <ClInclude Include="cpp&amp;h\rectcollision.h" />
     <ClInclude Include="cpp&amp;h\renderer.h" />
