--- a/Team_3year_Balloon.vcxproj
+++ b/Team_3year_Balloon.vcxproj
@@ -204,6 +204,8 @@
     <ClCompile Include="cpp&amp;h\model.cpp" />
     <ClCompile Include="cpp&amp;h\model_info.cpp" />
     <ClCompile Include="cpp&amp;h\mouse.cpp" />
+    <ClCompile Include="cpp&amp;h\network.cpp" />
+    <ClCompile Include="cpp&amp;h\networkKeyboard.cpp" />
     <ClCompile Include="cpp&amp;h\number.cpp" />
     <ClCompile Include="cpp&amp;h\pause.cpp" />
     <ClCompile Include="cpp&amp;h\pause_ui.cpp" />
@@ -228,7 +230,6 @@
     <ClCompile Include="cpp&amp;h\tutorial.cpp" />
     <ClCompile Include="cpp&amp;h\ui.cpp" />
     <ClCompile Include="cpp&amp;h\ui_group.cpp" />
-    <ClCompile Include="network.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cpp&amp;h\2Deffect.h" />
@@ -277,6 +278,8 @@
     <ClInclude Include="cpp&amp;h\model.h" />
     <ClInclude Include="cpp&amp;h\model_info.h" />
     <ClInclude Include="cpp&amp;h\mouse.h" />
+    <ClInclude Include="cpp&amp;h\network.h" />
+    <ClInclude Include="cpp&amp;h\networkKeyboard.h" />
     <ClInclude Include="cpp&amp;h\number.h" />
     <ClInclude Include="cpp&amp;h\pause.h" />
     <ClInclude Include="cpp&amp;h\pause_ui.h" />
@@ -301,7 +304,6 @@
     <ClInclude Include="cpp&amp;h\tutorial.h" />
     <ClInclude Include="cpp&amp;h\ui.h" />
     <ClInclude Include="cpp&amp;h\ui_group.h" />
-    <ClInclude Include="network.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
