--- a/Team_3year_Balloon.vcxproj
+++ b/Team_3year_Balloon.vcxproj
@@ -220,6 +220,8 @@
     <ClCompile Include="cpp&amp;h\scene_two.cpp" />
     <ClCompile Include="cpp&amp;h\scene_X.cpp" />
     <ClCompile Include="cpp&amp;h\score.cpp" />
+    <ClCompile Include="cpp&amp;h\select.cpp" />
+    <ClCompile Include="cpp&amp;h\selectcharacter.cpp" />
     <ClCompile Include="cpp&amp;h\shadow_mapping.cpp" />
     <ClCompile Include="cpp&amp;h\shape.cpp" />
     <ClCompile Include="cpp&amp;h\solider.cpp" />
@@ -295,6 +297,8 @@
     <ClInclude Include="cpp&amp;h\scene_two.h" />
     <ClInclude Include="cpp&amp;h\scene_X.h" />
     <ClInclude Include="cpp&amp;h\score.h" />
+    <ClInclude Include="cpp&amp;h\select.h" />
+    <ClInclude Include="cpp&amp;h\selectcharacter.h" />
     <ClInclude Include="cpp&amp;h\shadow_mapping.h" />
     <ClInclude Include="cpp&amp;h\shape.h" />
     <ClInclude Include="cpp&amp;h\solider.h" />
