--- a/Team_3year_Balloon.vcxproj
+++ b/Team_3year_Balloon.vcxproj
@@ -189,6 +189,7 @@
     <ClCompile Include="cpp&amp;h\ImGui\imgui_impl_win32.cpp" />
     <ClCompile Include="cpp&amp;h\ImGui\imgui_widgets.cpp" />
     <ClCompile Include="cpp&amp;h\input.cpp" />
+    <ClCompile Include="cpp&amp;h\item.cpp" />
     <ClCompile Include="cpp&amp;h\joypad.cpp" />
     <ClCompile Include="cpp&amp;h\keyboard.cpp" />
     <ClCompile Include="cpp&amp;h\keyconfig.cpp" />
@@ -267,6 +268,7 @@
     <ClInclude Include="cpp&amp;h\ImGui\imstb_textedit.h" />
     <ClInclude Include="cpp&amp;h\ImGui\imstb_truetype.h" />
     <ClInclude Include="cpp&amp;h\input.h" />
+    <ClInclude Include="cpp&amp;h\item.h" />
     <ClInclude Include="cpp&amp;h\joypad.h" />
     <ClInclude Include="cpp&amp;h\keyboard.h" />
     <ClInclude Include="cpp&amp;h\keyconfig.h" />
