--- a/Team_3year_Balloon.vcxproj
+++ b/Team_3year_Balloon.vcxproj
@@ -232,6 +232,7 @@
     <ClCompile Include="cpp&amp;h\spherecollision.cpp" />
     <ClCompile Include="cpp&amp;h\stencilshadow.cpp" />
     <ClCompile Include="cpp&amp;h\texture_manager.cpp" />
+    <ClCompile Include="cpp&amp;h\thunder.cpp" />
     <ClCompile Include="cpp&amp;h\title.cpp" />
     <ClCompile Include="cpp&amp;h\tutorial.cpp" />
     <ClCompile Include="cpp&amp;h\ui.cpp" />
@@ -312,6 +313,7 @@
     <ClInclude Include="cpp&amp;h\spherecollision.h" />
     <ClInclude Include="cpp&amp;h\stencilshadow.h" />
     <ClInclude Include="cpp&amp;h\texture_manager.h" />
+    <ClInclude Include="cpp&amp;h\thunder.h" />
     <ClInclude Include="cpp&amp;h\title.h" />
     <ClInclude Include="cpp&amp;h\tutorial.h" />
     <ClInclude Include="cpp&amp;h\ui.h" />
