死亡処理の調整及びrankの追加をしました。

--- a/Team_3year_Balloon.vcxproj
+++ b/Team_3year_Balloon.vcxproj
@@ -216,6 +216,7 @@
     <ClCompile Include="cpp&amp;h\pause.cpp" />
     <ClCompile Include="cpp&amp;h\pause_ui.cpp" />
     <ClCompile Include="cpp&amp;h\player.cpp" />
+    <ClCompile Include="cpp&amp;h\rank.cpp" />
     <ClCompile Include="cpp&amp;h\ranking.cpp" />
     <ClCompile Include="cpp&amp;h\rectcollision.cpp" />
     <ClCompile Include="cpp&amp;h\renderer.cpp" />
@@ -305,6 +306,7 @@
     <ClInclude Include="cpp&amp;h\pause_ui.h" />
     <ClInclude Include="cpp&amp;h\player.h" />
     <ClInclude Include="cpp&amp;h\p_zombie.h" />
+    <ClInclude Include="cpp&amp;h\rank.h" />
     <ClInclude Include="cpp&amp;h\ranking.h" />
     <ClInclude Include="cpp&amp;h\rectcollision.h" />
     <ClInclude Include="cpp&amp;h\renderer.h" />
