--- a/Team_3year_Balloon.vcxproj
+++ b/Team_3year_Balloon.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="cpp&amp;h\3Dline.cpp" />
     <ClCompile Include="cpp&amp;h\3Dmap.cpp" />
     <ClCompile Include="cpp&amp;h\3Dparticle.cpp" />
+    <ClCompile Include="cpp&amp;h\effect.cpp" />
     <ClCompile Include="cpp&amp;h\scoreUP.cpp" />
     <ClCompile Include="cpp&amp;h\balloon.cpp" />
     <ClCompile Include="cpp&amp;h\balloon_group.cpp" />
@@ -254,6 +255,7 @@
     <ClInclude Include="cpp&amp;h\3Dline.h" />
     <ClInclude Include="cpp&amp;h\3Dmap.h" />
     <ClInclude Include="cpp&amp;h\3Dparticle.h" />
+    <ClInclude Include="cpp&amp;h\effect.h" />
     <ClInclude Include="cpp&amp;h\scoreUP.h" />
     <ClInclude Include="cpp&amp;h\balloon.h" />
     <ClInclude Include="cpp&amp;h\balloon_group.h" />
