--- a/Team_3year_Balloon.vcxproj.filters
+++ b/Team_3year_Balloon.vcxproj.filters
@@ -282,7 +282,7 @@
     <ClCompile Include="cpp&amp;h\framework.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="thundercloud.cpp">
+    <ClCompile Include="cpp&amp;h\thundercloud.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -560,7 +560,7 @@
     <ClInclude Include="cpp&amp;h\framework.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="thundercloud.h">
+    <ClInclude Include="cpp&amp;h\thundercloud.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
